css/styles.css
/* 1. Variables primero */
/* 2. Reset después */
/* 3. Todo lo demás */

:root {
  --font-family-base: "Roboto Flex", sans-serif;
  --font-family-heading: "Gowun Batang", sans-serif;
  --font-family-secondary-heading: "Rethink Sans", sans-serif;
  --font-size-sm: 0.875rem;
  --font-size-base: 1rem;
  --font-size-lg: 1.25rem;
  --font-size-xl: 1.5rem;
  --font-size-2xl: 2rem;
  --font-size-3xl: 3rem;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --font-weight-bold: 700;
  --space-1: 0.25rem; /* 4px */
  --space-2: 0.5rem; /* 8px */
  --space-3: 0.75rem; /* 12px */
  --space-4: 1rem; /* 16px */
  --space-5: 1.25rem; /* 20px */
  --space-6: 1.5rem; /* 24px */
  --space-8: 2rem; /* 32px */
  --space-10: 2.5rem; /* 40px */
  --space-12: 3rem; /* 48px */
  --space-16: 4rem; /* 64px */
  --space-20: 5rem; /* 80px */
  --space-24: 6rem; /* 96px */
}

body {
  font-family: var(--font-family-base);
  margin: 0;
  padding: 0;
}

h1,
h2,
h3,
h4 {
  font-family: var(--font-family-heading);
}

/*Header Styles */

.header_section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.header_section .header_text {
  display: flex;
  justify-content: start;
  align-items: center;
  flex-direction: column;
  background-color: rgb(255, 255, 255);
  gap: var(--space-12);
  padding: 0 2em;
  text-align: center;
}

.header_section .header_text .nav_header {
  display: flex;
  justify-content: start;
  align-items: center;
  gap: var(--space-12);
  background-color: rgb(255, 255, 255);
  font-style: normal;
  font-family: "Gowun Batang";
  line-height: 1.1;
  text-decoration: none;
  width: 100%;
  padding: 1em;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

.header_section .nav_header a {
  text-decoration: none;
  color: black;
  padding: 0 1em;
}

.header_section .nav_header a p {
  font-size: var(--font-size-sm);
}

/*Header Anouncements Styles */

.header_section .announcement_bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 1em;
  padding: 0 2em;
  background-color: #f5f5f5;
  margin: 0 3em;
  width: 90%;
}

.header_section .announcement_bar a {
  text-decoration: underline;
  color: black;
}

.header_section .header_eyebrow {
  text-decoration: none;
}

.header_section .header_eyebrow a {
  text-decoration: none;
  color: black;
  font-family: var(--font-family-heading);
  font-weight: 500;
}

.header_section .header_primary_title h1 {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: 500;
}

.header_section .header_content a {
  color: black;
}

/* Header Image*/

.header_section .header_img_container {
  width: 100%;
  height: 100%;
}

.header_section .header_img_container img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

/* What We Do Section */

.what_we_do_section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.what_we_do_section h2 {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
}

.what_we_do_section h3 {
  font-size: var(--font-size-base);
  font-family: var(--font-family-secondary-heading);
}

.what_we_do_section .info_card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: var(--space-12);
  text-align: center;
}

.what_we_do_section .info_card h3 {
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-2xl);
}

.what_we_do_section .info_card p {
  font-family: var(--font-family-heading);
}

.what_we_do_section .info_card .info_card_secondary {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1em;
  padding: var(--space-10);
}

.what_we_do_section .info_card .info_card_secondary h4 {
  font-family: var(--font-family-secondary-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-xl);
}

.what_we_do_section .info_card .info_card_secondary p {
  font-family: var(--font-family-heading);
}

/*Img Break*/

.img_break_container {
  width: 100%;
  height: 100%;
}

.img_break_container img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

/* News Section */

.latest_news_section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.latest_news_section h2 {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
}

.latest_news_section .info_news {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.latest_news_section .info_news .first_news {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: var(--space-24);
  gap: 24px;
}

.latest_news_section .info_news .first_news img {
  width: 100%;
  height: 100%;
  border-radius: 24px;
}

.latest_news_section .info_news .first_news,
.first_news_text {
  text-align: center;
}

.latest_news_section .info_news .first_news .first_news_text h3 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-2xl);
}

.latest_news_section .info_news .first_news .first_news_text h4 {
  font-family: var(--font-family-secondary-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-xl);
}

.latest_news_section .info_news .first_news .first_news_text p {
  font-family: var(--font-family-heading);
}

/* SECOND NEWS */

.latest_news_section .info_news .second_news {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 80%;
  padding: 0 24px;
  gap: 48px;
}

.latest_news_section .info_news .second_news .first_second_new {
  display: flex;
  text-align: center;
  justify-content: center;
  flex-direction: column;
  padding: var(--space-10);
  width: 100%;
}

.latest_news_section .info_news .second_news .first_second_new img {
  border-radius: 24px;
}

.latest_news_section .info_news .second_news .second_second_new {
  display: flex;
  text-align: center;
  justify-content: center;
  flex-direction: column;
  padding: var(--space-10);
  width: 50%;
  height: 100%;
}

.latest_news_section .info_news .second_news .second_second_new img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  border-radius: 999px;
}

.latest_news_section .info_news .second_news h3 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-2xl);
}

.latest_news_section .info_news .second_news h4 {
  font-family: var(--font-family-secondary-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-xl);
}

/* Regional Results Section */

.regional_results_section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.regional_results_section h2 {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
}

.regional_results_section h3 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-2xl);
}

.regional_results_section h4 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  font-size: var(--font-size-xl);
}

.regional_results_section p {
  font-family: var(--font-family-heading);
}

.regional_results_section .container_results {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 5em;
}

.regional_results_section .container_results a {
  text-decoration: none;
  color: black;
}

/* Call To Action */

.call_to_action_section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 100%;
  height: 30vh;
  margin-top: 15em;
  position: relative;
}

.call_to_action_section img {
  object-fit: cover;
  object-position: center;
  height: 100%;
  width: 100%;
}

.call_to_action_section .call_to_action_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: absolute;
  z-index: 1000;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

.call_to_action_section .call_to_action_container h2 {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  color: #f5f5f5;
  padding: 0;
  margin: 0;
}

.call_to_action_section .call_to_action_container p {
  font-size: var(--font-size-3xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  color: #f5f5f5;
  padding: 0;
  margin: 0;
}

.call_to_action_section .call_to_action_container a {
  color: #f5f5f5;
}

/*Footer */

footer {
  background-color: #545454;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: 5em;
  padding: var(--space-12);
  color: #f5f5f5;
}

footer .social_links {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1em;
  width: 20%;
  height: 100%;
  padding: 5em;
}

footer .phrase_motivational {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1em;
  width: 25%;
  height: 100%;
  padding: 5em;
}

footer .phrase_motivational p {
  font-size: var(--font-size-xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
  color: #f5f5f5;
  padding: 0;
  margin: 0;
}

footer .footer_contact {
  padding: 0 5em;
}

footer .footer_contact a {
  color: #f5f5f5;
  font-size: var(--font-size-xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
}

footer .copyright_container {
  color: #f5f5f5;
  font-size: var(--font-size-xl);
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);
}

